          other failure events, preventing clean reconnection (RT#110429)
        - Ensure leaving an exception stack via Return::MultiLevel or something
          similar produces a large warning
        - Make sure exception objects stringifying to '' are properly handled
          and warned about (GH#15)
        - Fix silencing of exceptions thrown by custom inflate_result() methods
        - Fix incorrect data returned in a corner case of partial-select HRI
          invocation (no known manifestations of this bug in the field, see
          commit message for description of exact failure scenario)
        - Fix corner case of stringify-only overloaded objects being used in
          create()/populate()
        - Remove spurious exception warping in ::Replicated::execute_reliably
          (RT#113339)
        - Fix infinite loop on ->svp_release("nonexistent_savepoint") (GH#97)
        - Fix spurious ROLLBACK statements when a TxnScopeGuard fails a commit
          of a transaction with deferred FK checks: a guard is now inactivated
          immediately before the commit is attempted (RT#107159)
        - Fix use of ::Schema::Versioned combined with a user-supplied
          $dbh->{HandleError} (GH#101)
        - Fix spurious warning on MSSQL cursor invalidation retries (RT#102166)
        - Fix parsing of DSNs containing driver arguments (GH#99)
        - Work around unreliable $sth->finish() on INSERT ... RETURNING within
          DBD::Firebird on some compiler/driver combinations (RT#110979)
        - Really fix savepoint rollbacks on older DBD::SQLite (fix in 0.082800
          was not sufficient to cover up RT#67843)
        - Fix several corner cases with Many2Many over custom relationships
        - Fix the Sybase ASE storage incorrectly attempting to retrieve an
          autoinc value when inserting rows containing blobs (GH#82)

    * Misc
        - Add explicit test for pathological example of asymmetric IC::DT setup